--- a/Collections/index.html
+++ b/Collections/index.html
@@ -12,16 +12,17 @@
   <h1>TypeScript</h1>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/systemjs/0.21.0/system.js"></script>
-    <script>
-        SystemJS.config({
-            baseURL: "ts-modules",
-            packages: {
-                "/": { defaultExtension: "js" }
-            }
-        });
-        System.import("test.js");
-    </script>
-  <!-- <script src="js/app.js"></script> -->
+  <script>
+    SystemJS.config({
+      baseURL: "ts-modules",
+      packages: {
+        "/": {
+          defaultExtension: "js"
+        }
+      }
+    });
+    System.import("test.js");
+  </script>
 </body>
 
 </html>
